--- a/auf_savoirs_en_partage/templates/savoirs/sites_auf.html
+++ b/auf_savoirs_en_partage/templates/savoirs/sites_auf.html
@@ -17,7 +17,7 @@
     {% if data %}
     <div id="results">
         {% for r in data.results %}
-        {% include "savoirs/resultat.html" %}
+        {% include "savoirs/sites_auf_resultat.html" %}
         {% empty %}
         <div class="resultatRecherche">
             <h2>Aucun résultat trouvé</h2>
