espace perso fonction->statut

--- a/auf_savoirs_en_partage/templates/chercheurs/perso.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/perso.html
@@ -20,8 +20,8 @@
                 <td>{{chercheur.nationalite.nom|default:"-"}}</td>
             </tr>
             <tr>
-                <td class="label">Fonction:</td>
-                <td>{{chercheur.fonction_display|default:"-"}}</td>
+                <td class="label">Statut:</td>
+                <td>{{chercheur.statut_display|default:"-"}}</td>
             </tr>
             <tr>
                 <td class="label">Diplôme:</td>
