--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -24,7 +24,7 @@
     </fieldset>
     
     <fieldset>
-        <legend>Etablissement de rattachement</legend>
+        <legend>Etablissement de rattachement <span style="color:red">*</span></legend>
         {% if etablissement_form.errors %}
         <span class="message">Vous devez renseigner un établissement.</span>
         {% endif %}
