Ortographe de "évènement"
L'orthographe du mot évènement a été uniformisé. On opte pour la nouvelle
orthographe.

Demande #622

--- a/auf_savoirs_en_partage/templates/savoirs/a-propos.html
+++ b/auf_savoirs_en_partage/templates/savoirs/a-propos.html
@@ -26,7 +26,7 @@ Le répertoire présente une base de données de plus de 7000 chercheurs, étudi
 
 <div class="texte">
 <p> 
-La possibilité est offerte aux chercheurs d'annoncer sur ce portail un événement scientifique en l'inscrivant dans un agenda consultable par tous. 
+La possibilité est offerte aux chercheurs d'annoncer sur ce portail un évènement scientifique en l'inscrivant dans un agenda consultable par tous. 
 C'est aussi un outil de communication et de veille au service des universitaires et scientifiques francophones qui leur permet de se tenir informés des manifestations scientifiques et de répondre aux appels à communications et contributions ainsi qu'aux appels à projets. 
 </p>
 </div>
