--- a/auf_savoirs_en_partage/templates/savoirs/evenement_ajout.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_ajout.html
@@ -20,7 +20,7 @@
 </style>
 
 <div class="clearfix">
-  <h4>Soumettre un événement</h4>
+  <h4>Soumettre un évènement</h4>
   <div class="zone-texte">
     <form method="POST">
       <table class="form">
