--- a/auf_savoirs_en_partage/templates/savoirs/evenement_confirmation.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_confirmation.html
@@ -12,9 +12,9 @@
 </style>
 
 <div class="clearfix">
-  <h4>Soumettre un événement</h4>
+  <h4>Soumettre un évènement</h4>
   <div class="zone-texte">
-    <p>Votre événement a bien été pris en compte, il sera approuvé par notre 
+    <p>Votre évènement a bien été pris en compte, il sera approuvé par notre 
     équipe bientôt.</p>
   </div>
 </div>
