--- a/auf_savoirs_en_partage/templates/savoirs/evenement_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_index.html
@@ -12,7 +12,7 @@
 
 <div class="texte">
     <p>
-    La possibilité est offerte aux chercheurs d'annoncer sur ce portail un événement scientifique en l'inscrivant dans un agenda consultable par tous. 
+    La possibilité est offerte aux chercheurs d'annoncer sur ce portail un évènement scientifique en l'inscrivant dans un agenda consultable par tous. 
     C'est aussi un outil de communication et de veille au service des universitaires et scientifiques francophones qui leur permet de se tenir informés des manifestations scientifiques et de répondre aux appels à communications et contributions ainsi qu'aux appels à projets. 
     </p>
     <p>
@@ -28,7 +28,7 @@
     </table>
     </form>
 
-<h5>Résultats : {{ nb_resultats }} événements correspondant à votre recherche</h5>
+<h5>Résultats : {{ nb_resultats }} évènements correspondant à votre recherche</h5>
 
 <div class="contenu-wrapper">
     <div class="centre">{% paginate %}</div>
