--- a/auf_savoirs_en_partage/templates/savoirs/evenement_utilisation.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_utilisation.html
@@ -15,7 +15,7 @@
         <b>Autorisations :</b><br />
         <ul>
         <li>L'agenda est librement consultable par tous les visiteurs du site Savoirs en partage.</li>
-        <li>En revanche, seuls les chercheurs inscrits au répertoire peuvent ajouter des événements et pourront ainsi proposer d'annoncer à la communauté universitaire francophone un événement  scientifique en remplissant en ligne une « fiche évènement ».</li>
+        <li>En revanche, seuls les chercheurs inscrits au répertoire peuvent ajouter des évènements et pourront ainsi proposer d'annoncer à la communauté universitaire francophone un événement  scientifique en remplissant en ligne une « fiche événement ».</li>
         </ul>
     </p>
     <p>
@@ -30,7 +30,7 @@
         {% endcomment %}
     </p>
     <p>
-        <b>Type d'événement : </b><br />
+        <b>Type d'évènement : </b><br />
         L'agenda scientifique permet d'annoncer les évènements de type : 
         <ul>
         <li>Colloque, conférence</li>
