--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -49,7 +49,7 @@
         <a id="rss-agenda" href="/rss/agenda"><img src="/media/img/feed.png" /></a>
 
         <ul class="sous-menu">
-          <li><a href="{% url savoirs.views.evenement_index %}">Tous les événements</a></li>
+          <li><a href="{% url savoirs.views.evenement_index %}">Tous les évènements</a></li>
           {% include "savoirs/evenement_actions.html" %}
         </ul>
 
