Présenter un lien unique "Accès aux inscrits" pour la connexion et l'inscription.
Demande #584

--- a/auf_savoirs_en_partage/templates/accounts/login.html
+++ b/auf_savoirs_en_partage/templates/accounts/login.html
@@ -8,7 +8,6 @@
     <p class="message">Login ou mot de passe invalide.</p>
     {% endif %}
     <form method="post" action="{% url chercheurs.views.chercheur_login %}">
-      <fieldset>
       <table>
         <tr>
           <td>{{ form.username.label_tag }}</td>
@@ -19,11 +18,11 @@
           <td>{{ form.password }}</td>
         </tr>
       </table>
-      <p><a href="{% url chercheurs.views.send_password %}">Mot de passe oublié ?</a></p>
       <input type="submit" value="Connexion" />
-      <input type="hidden" name="next" value="{% if next %}{{next}}{% else %}/chercheurs/perso/{% endif %}" />
-      </fieldset>
     </form>
+    <p><a href="{% url chercheurs.views.send_password %}">Mot de passe oublié ?</a></p>
+    <p>Vous n'avez pas encore de compte? 
+    <a href="{% url chercheurs.views.inscription %}">Inscrivez-vous</a>.</p>
 </div>
 
 {% endblock %}
