--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -204,7 +204,7 @@ select     { width:100%; overflow:hidden }
 #agenda, #actualites {position: relative;}
 #rss-agenda, #rss-actualites {position: absolute; right: 26px; top: 10px;}
 
-form {padding-right:20px}
+form {padding-right:20px; margin: 1em 0; }
 
 form fieldset {
   clear: both;
