--- a/auf_savoirs_en_partage/templates/chercheurs/retrieve.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/retrieve.html
@@ -1,132 +1,8 @@
 {% extends "container_base.html" %}
 
 {% block contenu %}
-
-<h4>Chercheurs</h4>
-
 <h4>{{ chercheur }}</h4>
-
 <div class="contenu-wrapper">
-    <div id="fiche_chercheur">
-        <p>{{chercheur.personne.courriel}}</p>
-        {% if chercheur.etablissement.nom or chercheur.etablissement_autre_nom %}
-        <p>{% firstof chercheur.etablissement.nom chercheur.etablissement_autre_nom "-" %}, {% firstof chercheur.etablissement.pays chercheur.etablissement_autre_pays "-" %}</p>
-        {% endif %}
-        
-        <table>
-            {% if chercheur.nationalite %}
-            <tr>
-                <td class="label">Nationalité:</td>
-                <td>{{chercheur.nationalite.nom|default:"-"}}</td>
-            </tr>
-            {% endif %}
-            <tr>
-                <td class="label">Statut:</td>
-                <td>{{chercheur.statut_display|default:"-"}}</td>
-            </tr>
-            <tr>
-                <td class="label">Diplôme:</td>
-                <td>{{chercheur.diplome|default:"-"}}</td>
-            </tr>
-        </table>
-        <table>
-            {% if chercheur.url_site_web %}
-            <tr>
-                <td class="label">Url site web:</td>
-                <td><a href="{{chercheur.url_site_web}}">{{chercheur.url_site_web}}</a></td>
-            </tr>
-            {% endif %}
-            {% if chercheur.url_blog %}
-            <tr>
-                <td class="label">Blog:</td>
-                <td><a href="{{chercheur.url_blog}}">{{chercheur.url_blog}}</a></td>
-            </tr>
-            {% endif %}
-            {% if chercheur.url_reseau_social %}
-            <tr>
-                <td class="label">Réseau social:</td>
-                <td><a href="{{chercheur.url_reseau_social}}">{{chercheur.url_reseau_social }}</a></td>
-            </tr>
-            {% endif %}
-        </table>
-        
-        {% if chercheur.expertise %}
-            <h5>Expertise</h5>
-            <table>
-                <tr>
-                    <td class="label">Titre de l'expertise:</td>
-                    <td>{{chercheur.expertise.nom}}</td>
-                </tr>
-                {% if chercheur.expertise.date %}
-                <tr>
-                    <td class="label">Date:</td>
-                    <td>{{chercheur.expertise.date}}</td>
-                </tr>
-                {% endif %}
-                {% if chercheur.expertise.organisme_demandeur and chercheur.expertise.organisme_demandeur_visible %}
-                <tr>
-                    <td class="label">Organisme demandeur:</td>
-                    <td>{{chercheur.expertise.organisme_demandeur}}</td>
-                </tr>
-                {% endif %}
-            </table>
-        {% endif %}
-
-        <h5>Thèmes de recherche et publications</h5>
-        <table id="publications">
-            {% if chercheur.theme_recherche %}
-            <tr class="souligne">
-                <td class="label">Thèmes de recherche:</td>
-                <td>{{chercheur.theme_recherche}}</td>
-            </tr>
-            {% endif %}
-            {% if chercheur.these %}
-            <tr class="souligne">
-                <td class="label">Thèse:</td>
-                {% with chercheur.these as publication %}{% include "chercheurs/publication_display.html" %}{% endwith %}
-            </tr>
-            {% endif %}
-            <tr>
-                <td class="label">Publications:</td>
-                {% with chercheur.publication1 as publication %}{% include "chercheurs/publication_display.html" %}{% endwith %}
-            </tr>
-            <tr>
-                <td class="label"></td>
-                {% with chercheur.publication2 as publication %}{% include "chercheurs/publication_display.html" %}{% endwith %}
-            </tr>
-            <tr>
-                <td class="label"></td>
-                {% with chercheur.publication3 as publication %}{% include "chercheurs/publication_display.html" %}{% endwith %}
-            </tr>
-            <tr>
-                <td class="label"></td>
-                {% with chercheur.publication4 as publication %}{% include "chercheurs/publication_display.html" %}{% endwith %}
-            </tr>
-        </table>
-
-        <h5>Domaines de recherche</h5>
-        <table>
-            <tr>
-                <td class="label">Adhésion(s) active(s):</td>
-                <td>
-                {% for g in chercheur.chercheurgroupe_set.all %}
-                    {{g.groupe.nom}}<br />
-                {% endfor %}
-                </td>
-            </tr>
-        </table>
-        
-        {% if chercheur.discipline %}
-        <h5>Discipline</h5>
-        <table>
-            <tr>
-                <td class="label">Discipline:</td>
-                <td>{{chercheur.discipline}}</td>
-            </tr>
-        </table>
-        {% endif %}
-    </div>
-
+    {% include "chercheurs/fiche.html" %}
 </div>
-
 {% endblock %}
