--- a/auf_savoirs_en_partage/templates/chercheurs/actions.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/actions.html
@@ -1,5 +1,6 @@
 {% if user_chercheur %}
 <li><a href="{% url chercheurs.views.perso %}">Espace chercheur</a></li>
 {% else %}
-<li><a href="{% url chercheurs.views.chercheur_login %}">Accès aux inscrits</a></li>
+<li><a href="{% url chercheurs.views.chercheur_login %}">Se connecter</a></li>
+<li><a href="{% url chercheurs.views.inscription %}">S'inscrire</a></li>
 {% endif %}
