--- a/auf_savoirs_en_partage/templates/chercheurs/rechercher.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/rechercher.html
@@ -9,7 +9,7 @@
 <form method="get" action="" class="contenu-wrapper">
     <table id="repertoire_recherche">
     {{repertoire_form.as_table}}
-    <tr><td colspan="2" class="Lib"><input type="submit" class="bouton" value="Rechercher" /></td></tr>
+    <tr><th></th><td><input type="submit" class="bouton" value="Rechercher" /></td></tr>
     </table>
 </form>
 
