Ajout du champ "Groupe de recherche" dans la fiche du chercheur.
Demande #687

--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -42,6 +42,7 @@
         <table>
             {% form_field forms.chercheur.discipline %}
             {% form_field forms.chercheur.theme_recherche %}
+            {% form_field forms.chercheur.groupe_recherche %}
             {% form_field forms.chercheur.mots_cles %}
             {% form_field forms.chercheur.url_site_web %}
             {% form_field forms.chercheur.url_blog %}
