Remplacé "champ disciplinaire" par "discipline"
Demande #630

--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -38,7 +38,7 @@
     </fieldset>
     
     <fieldset>
-        <legend>Champ disciplinaire, thèmes de recherche</legend>
+        <legend>Discipline, thèmes de recherche</legend>
         <table>
             {% form_field forms.chercheur.discipline %}
             {% form_field forms.chercheur.theme_recherche %}
