--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -25,7 +25,7 @@
         </tr>
     </table>
 
-    <h5>Champ disciplinaire, thèmes de recherche</h5>
+    <h5>Discipline, thèmes de recherche</h5>
     <table>
         <tr>
             <td class="label">Discipline:</td>
