Renommé le bouton de sauvegarde du formulaire d'édition de la fiche du chercheur.

--- a/auf_savoirs_en_partage/templates/chercheurs/edit.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/edit.html
@@ -57,7 +57,7 @@
         </div>
     </fieldset>
 
-    <input type="submit" name="Submit" value="Éditer" class="bouton" />
+    <input type="submit" value="Sauvegarder" />
 </form>
 </div>
 {% endblock %}
