Utiliser des boutons radio oui/non plutôt qu'un checkbox pour la question "afficher l'organisme demandeur?" dans la fiche du chercheur.

--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -61,7 +61,7 @@
         </table>
     </fieldset>
 
-    <fieldset>
+    <fieldset class="horizontal-radio-buttons">
         <legend>Expertise</legend>
         <div>
             {% with forms.expertise as form %}
