--- a/auf_savoirs_en_partage/templates/savoirs/evenement_ajout.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_ajout.html
@@ -1,34 +1,33 @@
 {% extends "container_base.html" %}
 
 {% block extra-script %}
-    {{ form.media.js }}
+{{ form.media.js }}
 {% endblock %}
 
 {% block extra-style %}
-    {{ form.media.css }}
+{{ form.media.css }}
 {% endblock %}
 
 {% block contenu %}
 
 <style>
-  div.boite-recherche { display: none !important; }
-  div#contenu { margin-top: 20px !important; }
-  div#results { margin-top: 15px; }
-  div.tabber { display: none; }
-  th { font-weight: normal; padding-right: 10px;}
-  input[type=text] { width: 250px; }
+    div.boite-recherche { display: none !important; }
+    div#contenu { margin-top: 20px !important; }
+    div#results { margin-top: 15px; }
+    div.tabber { display: none; }
+    th { font-weight: normal; padding-right: 10px;}
 </style>
 
 <div class="clearfix">
-  <h4>Soumettre un évènement</h4>
-  <div class="zone-texte">
-    <form method="POST">
-      <table class="form">
-        {{ form }}
-        <tr><td></td><td><input type="submit" value="Ajouter" /></td></tr>
-      </table>
-    </form>
-  </div>
+    <h4>Soumettre un évènement</h4>
+    <div class="contenu-wrapper">
+        <form method="POST">
+            <table class="form">
+                {% include "render_form.html" %}
+                <tr><td></td><td><input type="submit" value="Ajouter" /></td></tr>
+            </table>
+        </form>
+    </div>
 </div>
 
 {% endblock %}
